src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_access.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..3) (parser kind)
2: RecordDecl(name=Some("S"), ty=1048596, is_union=false, members=4..4)
3: Function(name=f, symbol=2, ty=TypeRef(base=21, class=Function, ptr=0, arr=None), params=[], body=6)
4: FieldDecl(name=Some("a"), ty=Int)
5: LiteralString(f)
6: CompoundStatement(stmts=7..10)
7: VarDecl(name=s, ty=TypeRef(base=20, class=Record, ptr=0, arr=None), storage=None)
8: VarDecl(name=p, ty=TypeRef(base=20, class=Pointer, ptr=1, arr=None), storage=None)
9: VarDecl(name=arr, ty=TypeRef(base=8, class=Array, ptr=0, arr=Some(10)), storage=None)
10: VarDecl(name=x, ty=Int, storage=None)
11: LiteralInt(10, None)
12: BinaryOp(Add, 13, 18)
13: BinaryOp(Add, 14, 16)
14: MemberAccess(15, a, .)
15: Ident(s)
16: MemberAccess(17, a, ->)
17: Ident(p)
18: IndexAccess(19, 20)
19: Ident(arr)
20: LiteralInt(0, None)
