src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_builtin_offsetof.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..3) (parser kind)
2: RecordDecl(name=Some("S"), ty=1048596, is_union=false, members=4..4)
3: Function(name=f, symbol=2, ty=TypeRef(base=21, class=Function, ptr=0, arr=None), params=[], body=6)
4: FieldDecl(name=Some("a"), ty=Int)
5: LiteralString(f)
6: CompoundStatement(stmts=7..7)
7: VarDecl(name=x, ty=Int, storage=None)
8: BuiltinOffsetof(TypeRef(base=20, class=Record, ptr=0, arr=None), 9)
9: MemberAccess(10, a, .)
