src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_generic.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..5)
5: VarDecl(name=x, ty=Int, storage=None)
6: GenericSelection(control=7, associations=8..9)
7: LiteralInt(1, None)
8: GenericAssociation(ty=Some(QualType(8)), result_expr=10)
9: GenericAssociation(ty=None, result_expr=11)
10: LiteralInt(1, None)
11: LiteralInt(0, None)
