src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_labels.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..5)
5: Label(L, 6)
6: Goto(L)
