src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_ops.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..12)
5: VarDecl(name=a, ty=Int, storage=None)
6: VarDecl(name=b, ty=Int, storage=None)
7: VarDecl(name=c, ty=Int, storage=None)
8: ExpressionStatement(15)
9: ExpressionStatement(20)
10: ExpressionStatement(28)
11: ExpressionStatement(31)
12: ExpressionStatement(33)
13: LiteralInt(1, None)
14: LiteralInt(2, None)
15: Assignment(Assign, 16, 17)
16: Ident(c)
17: BinaryOp(Add, 18, 19)
18: Ident(a)
19: Ident(b)
20: Assignment(Assign, 21, 22)
21: Ident(c)
22: TernaryOp(23, 26, 27)
23: BinaryOp(Greater, 24, 25)
24: Ident(a)
25: Ident(b)
26: Ident(a)
27: Ident(b)
28: Assignment(AssignAdd, 29, 30)
29: Ident(c)
30: LiteralInt(1, None)
31: PostIncrement(32)
32: Ident(a)
33: UnaryOp(PreIncrement, 34)
34: Ident(b)
