src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_sizeof_alignof.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..6)
5: VarDecl(name=a, ty=Int, storage=None)
6: VarDecl(name=s, ty=Int, storage=None)
7: Cast(Int, 8)
8: LiteralFloat(1, None)
9: BinaryOp(Add, 10, 14)
10: BinaryOp(Add, 11, 12)
11: SizeOfType(Int)
12: SizeOfExpr(13)
13: Ident(a)
14: AlignOf(Int)
