src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_static_assert.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: StaticAssert(condition=3, message=""msg"")
3: LiteralInt(1, None)
4: LiteralString("msg")
