src/tests/snapshots/cendol__tests__ast_dumper_coverage__parser_ast_switch.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---
1: TranslationUnit(decls=2..2) (parser kind)
2: Function(name=f, symbol=1, ty=TypeRef(base=20, class=Function, ptr=0, arr=None), params=[], body=4)
3: LiteralString(f)
4: CompoundStatement(stmts=5..5)
5: Switch(condition=6, body=7)
6: LiteralInt(1, None)
7: CompoundStatement(stmts=8..9)
8: Case(10, 11)
9: Default(12)
10: LiteralInt(1, None)
11: Break
12: Continue
