src/tests/snapshots/cendol__tests__ast_dumper_coverage__type_registry_complex.snap
---
source: src/tests/ast_dumper_coverage.rs
expression: output
---

=== TypeRegistry (Used TypeRefs) ===
TypeRef(8): int
TypeRef(24): <VLA>
TypeRef(22): void(int)
TypeRef(25): void(int, ...)
TypeRef(20): struct Point
TypeRef(21): enum Color
TypeRef(23): _Complex
